# tlRender

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  sbuild-linux.sh  sbuild-macos.sh  sbuild-win.bat  tlRenderConfig.cmake.in
etc/Legal/: CMakeLists.txt
etc/SuperBuild/: CMakeLists.txt
lib/tlRender/: CMakeLists.txt
lib/tlRender/BakeApp/: App.cpp  App.h  CMakeLists.txt
lib/tlRender/Core/: Audio.cpp  Audio.h  AudioInline.h  AudioResample.cpp  AudioResample.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Color.cpp  Color.h  Export.h  FileLogSystem.cpp  FileLogSystem.h  HDR.cpp  HDR.h  HDRInline.h  ISystem.cpp  ISystem.h  Init.cpp  Time.cpp  Time.h  TimeInline.h  URL.cpp  URL.h  Util.h  Version.h
lib/tlRender/CorePy/: Audio.cpp  Audio.h  Bindings.cpp  Bindings.h  CMakeLists.txt  Time.cpp  Time.h
lib/tlRender/CoreTest/: AudioTest.cpp  AudioTest.h  CMakeLists.txt  HDRTest.cpp  TimeTest.cpp  TimeTest.h  URLTest.cpp
lib/tlRender/Device/: BMDData.cpp  BMDData.h  BMDDevicesModel.cpp  BMDDevicesModel.h  BMDHDRVideoFrame.cpp  BMDOutputCallback.cpp  BMDOutputDevice.cpp  BMDOutputDevice.h  BMDOutputPrivate.h  BMDSystem.cpp  BMDSystem.h  BMDUtil.cpp  BMDUtil.h  CMakeLists.txt  Init.cpp  Init.h
lib/tlRender/GL/: CMakeLists.txt  Render.cpp  Render.h  RenderPrims.cpp  RenderPrivate.h  RenderShaders_GLES_2.cpp  RenderShaders_GL_4_1.cpp  RenderVideo.cpp
lib/tlRender/IO/: AVF.cpp  AVF.h  AVFRead.mm  CMakeLists.txt  EXR.cpp  EXR.h  EXRPrivate.h  EXRRead.cpp  EXRWrite.cpp  FFmpeg.cpp  FFmpeg.h  FFmpegCmd.cpp  FFmpegCmd.h  FFmpegCmdPrivate.h  FFmpegCmdRead.cpp  FFmpegPipe.cpp  FFmpegPipe.h  FFmpegPipePrivate.h  FFmpegPipeRead.cpp  FFmpegPipeWrite.cpp  FFmpegPrivate.h  FFmpegRead.cpp  FFmpegReadAudio.cpp  FFmpegReadPrivate.h  FFmpegReadVideo.cpp  FFmpegWrite.cpp  IO.cpp  IO.h  IOInline.h  Init.cpp  Init.h  OIIO.cpp  OIIO.h  OIIORead.cpp  OIIOWrite.cpp  Plugin.cpp  Plugin.h  Read.cpp  Read.h  RequestQueuePrivate.h  (+18 more)
lib/tlRender/IOPy/: Bindings.cpp  Bindings.h  CMakeLists.txt  IO.cpp  IO.h
lib/tlRender/IOTest/: CMakeLists.txt  EXRTest.cpp  FFmpegTest.cpp  FFmpegTest.h  IOTest.cpp  IOTest.h  OIIOTest.cpp  OIIOTest.h  RequestQueueTest.cpp  RequestQueueTest.h
lib/tlRender/PlayApp/: App.cpp  App.h  CMakeLists.txt  CompareActions.cpp  CompareActions.h  FileActions.cpp  FileActions.h  FilesModel.cpp  FilesModel.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  PlaybackActions.cpp  PlaybackActions.h  PlaybackBar.cpp  PlaybackBar.h  RecentFilesModel.cpp  RecentFilesModel.h  SettingsModel.cpp  SettingsModel.h  SettingsWidget.cpp  SettingsWidget.h  StatusBar.cpp  StatusBar.h  TabBar.cpp  TabBar.h  ToolBars.cpp  ToolBars.h  ViewActions.cpp  ViewActions.h  WindowActions.cpp  WindowActions.h
lib/tlRender/Qt/: CMakeLists.txt  ContextObject.cpp  Init.cpp  Init.h  MetaTypes.h  PlayerObject.cpp  PlayerObject.h  TimeObject.cpp  TimeObject.h  ToolTipsFilter.cpp
lib/tlRender/QtQuick/: CMakeLists.txt  GLFramebufferObject.cpp  GLFramebufferObject.h  Init.cpp  Init.h
lib/tlRender/QtTest/: CMakeLists.txt  TimeObjectTest.cpp
lib/tlRender/QtWidget/: CMakeLists.txt  ContainerWidget.cpp  ContainerWidget.h  Init.cpp  Init.h  SpeedLabel.cpp  SpeedLabel.h  TimeLabel.cpp  TimeLabel.h  TimeSpinBox.cpp  TimeSpinBox.h  TimelineWidget.cpp  TimelineWidget.h  Util.cpp  Viewport.cpp  Viewport.h
lib/tlRender/Resource/: CMakeLists.txt
lib/tlRender/Timeline/: Audio.cpp  Audio.h  AudioSystem.cpp  AudioSystem.h  BackgroundOptions.cpp  BackgroundOptions.h  CMakeLists.txt  ColorOptions.cpp  ColorOptions.h  CompareOptions.cpp  CompareOptions.h  DisplayOptions.cpp  DisplayOptions.h  ForegroundOptions.cpp  ForegroundOptions.h  IRender.cpp  IRender.h  Init.cpp  Init.h  MemRef.cpp  MemRef.h  Player.cpp  Player.h  PlayerAudio.cpp  PlayerOptions.cpp  PlayerOptions.h  PlayerPrivate.cpp  PlayerPrivate.h  RenderUtil.cpp  RenderUtil.h  System.cpp  System.h  TimeUnits.cpp  TimeUnits.h  Timeline.cpp  Timeline.h  TimelineCreate.cpp  TimelineOptions.cpp  TimelineOptions.h  TimelinePrivate.cpp  (+10 more)
lib/tlRender/TimelinePy/: Audio.cpp  Audio.h  BackgroundOptions.cpp  BackgroundOptions.h  Bindings.cpp  Bindings.h  CMakeLists.txt  ColorOptions.cpp  ColorOptions.h  CompareOptions.cpp  CompareOptions.h  DisplayOptions.cpp  DisplayOptions.h  ForegroundOptions.cpp  ForegroundOptions.h  Player.cpp  Player.h  PlayerOptions.cpp  PlayerOptions.h  TimeUnits.cpp  TimeUnits.h  Timeline.cpp  Timeline.h  TimelineOptions.cpp  TimelineOptions.h  Transition.cpp  Transition.h  Util.cpp  Util.h  Video.cpp  Video.h
lib/tlRender/TimelineTest/: AudioSystemTest.cpp  AudioSystemTest.h  CMakeLists.txt  ColorOptionsTest.cpp  ColorOptionsTest.h  CompareOptionsTest.cpp  CompareOptionsTest.h  DisplayOptionsTest.cpp  DisplayOptionsTest.h  MemRefTest.cpp  MemRefTest.h  PlayerOptionsTest.cpp  PlayerTest.cpp  PlayerTest.h  TimelineTest.cpp  TimelineTest.h  UtilTest.cpp  UtilTest.h
lib/tlRender/UI/: AudioClipItem.cpp  AudioClipItem.h  CMakeLists.txt  FrameToolBar.cpp  (+37 more)
tests/CoreTest/: AudioTest.cpp  AudioTest.h  CMakeLists.txt  ColorTest.cpp  ColorTest.h  HDRTest.cpp  HDRTest.h  TimeTest.cpp  TimeTest.h  URLTest.cpp  URLTest.h
tests/IOTest/: CMakeLists.txt  EXRTest.cpp  EXRTest.h  FFmpegTest.cpp  FFmpegTest.h  IOTest.cpp  IOTest.h  OIIOTest.cpp  OIIOTest.h
tests/QtTest/: CMakeLists.txt  TimeObjectTest.cpp  TimeObjectTest.h
tests/TestLib/: CMakeLists.txt  ITest.cpp  ITest.h
tests/TimelineTest/: CMakeLists.txt  ColorOptionsTest.cpp  ColorOptionsTest.h  CompareOptionsTest.cpp  CompareOptionsTest.h  DisplayOptionsTest.cpp  DisplayOptionsTest.h  MemRefTest.cpp  MemRefTest.h  PlayerOptionsTest.cpp  PlayerOptionsTest.h  PlayerTest.cpp  PlayerTest.h  TimelineTest.cpp  TimelineTest.h  UtilTest.cpp  UtilTest.h
tests/tl-test/: CMakeLists.txt  main.cpp  tl-test.cpp  tl-test.h
tests/tlIOTest/: CMakeLists.txt  EXRTest.cpp  EXRTest.h  FFmpegTest.cpp  IOTest.cpp  OIIOTest.cpp  OpenEXRTest.cpp
tests/tlTimelineTest/: CMakeLists.txt  MemRefTest.cpp  MemRefTest.h  PlayerTest.cpp  TimelineTest.cpp  UtilTest.cpp
tests/tltest/: CMakeLists.txt  main.cpp
(+226 files in other folders)
