add_subdirectory(Core)
add_subdirectory(Device)
add_subdirectory(GL)
add_subdirectory(IO)
add_subdirectory(Resource)
add_subdirectory(Timeline)
add_subdirectory(UI)

if(TLRENDER_PROGRAMS)
    add_subdirectory(BakeApp)
    add_subdirectory(PlayApp)
endif()

if(TLRENDER_QT6 OR TLRENDER_QT5)
    add_subdirectory(Qt)
    add_subdirectory(QtQuick)
    add_subdirectory(QtWidget)
endif()

if(TLRENDER_PYTHON)
    add_subdirectory(CorePy)
    add_subdirectory(TimelinePy)
    add_subdirectory(UIPy)
    add_subdirectory(tlRenderPy)
endif()
